<resources>
    <string name="app_name">Calendar</string>
    <string name="podaj_rok">Pick Year</string>
    <string name="WorkDayButton">Work Days</string>
    <string name="niedziele">Trade Sundays</string>
    <string name="popielec">Ash Wednesday:</string>
    <string name="wielkanoc">Easter:</string>
    <string name="boze_cialo">Corpus Christi:</string>
    <string name="poczatek_adventu">Beginning od Advent:</string>
    <string name="yearSunday">Trade Sundays in %s:</string>
    <string name="toastMessage">"Year must be greater or equal 2020" </string>
    <string name="data_poczatkowa">Start date</string>
    <string name="data_koncowa">End date</string>
    <string name="normal_days">Normal days</string>
    <string name="work_days">Work days</string>
    <string name="toastMessageDate" >"Start date must be before end date" </string>
    <string name="wrongDateMessStart">Calendar days: -</string>
    <string name="wrongDateMessEnd">Work days: -</string>
    <string name="DateMessStart">Calendar days: %s</string>
    <string name="DateMessEnd">Work days: %s</string>
    <string name="backButton">Ok</string>
</resources>