<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkDays">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/startDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_poczatkowa" />

        <DatePicker
            android:id="@+id/datePickerStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <TextView
            android:id="@+id/endDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_koncowa" />

        <DatePicker
            android:id="@+id/datePickerEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <TextView
            android:id="@+id/daysNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/normal_days" />

        <TextView
            android:id="@+id/daysWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work_days" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <Button
            android:id="@+id/tradeBB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backButton" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>